--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@azure/identity": "3.1.2",
     "@azure/ms-rest-js": "2.6.4",
     "@xmldom/xmldom": "0.8.6",
+    "minimist": "^1.2.7",
     "qs": "^6.5.3",
     "shelljs": "^0.8.5"
   }
