fix: [#1440, #1432] Component Governance security vulnerability for ejs 2.7.4, 3.1.6 and glob-parent 3.1.0 (#1461)
* [CVE-2020-28469, WS-2021-0153, WS-2022-29078] Upgrade glob-parent and ejs by updating yeoman-test from 1.9.1 to 6.0.0 and yeoman-generator from 2.0.5 to 5.7.0

* Fix yarn.lock file

---------

Co-authored-by: Tracy Boehrer <trboehre@microsoft.com>

--- a/generators/generator-bot-adaptive/package.json
+++ b/generators/generator-bot-adaptive/package.json
@@ -28,15 +28,16 @@
     "normalize-path": "^3.0.0",
     "runtypes": "~5.1.0",
     "uuid": "^8.3.1",
-    "yeoman-generator": "^2.0.5"
+    "yeoman-generator": "^5.7.0"
   },
   "devDependencies": {
-    "ejs": "^3.1.7",
+    "ejs": "^3.1.8",
     "eslint": "latest",
     "eslint-config-prettier": "latest",
     "eslint-plugin-prettier": "latest",
     "mocha": "^8.3.2",
     "prettier": "latest",
+    "yeoman-environment": "^3.3.0",
     "yeoman-test": "^6.0.0"
   }
 }
